# mcp-secure-db-agents

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
agent/: models.py  prompts.py  qwen_prompts.py  runner.py  tool_router.py
data/: seed_indirect_injection.sql
database/: README.md  init.sql  permissions.sql  views.sql
database/init/: 01_schema.sql  02_data.sql  03_views.sql  04_permissions.sql
docs/: architecture.md  methodology.md  reproducibility.md  results-template.md
experiments/: analyze_results.py  compare_results.py  prompts_legitimos.csv  prompts_maliciosos.csv  prompts_sensiveis.csv  run_baseline.py  run_experiment.py
mcp_server/: audit.py  db.py  policy_engine.py  server.py  sql_validator.py  tools.py
paper/: 03-arquitetura-proposta.md
paper/figures/: arquitetura-mcp-consultas-seguras-standalone.tex  arquitetura-mcp-consultas-seguras-tikz.tex  arquitetura-mcp-consultas-seguras.mmd
policies/: roles.yaml
results/: metrics.csv  raw_logs.jsonl
scripts/: run_mcp_server.sh
tests/: test_agent_runner.py  test_audit.py  test_baseline_runner.py  test_mcp_tools.py  test_model_client.py  test_policy_engine.py  test_sql_validator.py
