[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-secure-db-agents"
version = "0.1.0"
description = "MCP-based architecture for secure LLM agent queries over relational databases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.0",
    "sqlglot>=25.0.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
analysis = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "mcp_server*", "experiments*"]
exclude = ["paper*", "data*", "database*", "results*", "policies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
